--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">			
-<span class="icon fa-user-astronaut"></span>
+<i class="fas fa-user-astronaut fa-2x"></i>
 						</div>
 						<div class="content">
 							<div class="inner">
