--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">			
-<i class="fas fa-user-astronaut fa-4x"></i>
+<i class="fas fa-user-astronaut fa-3x"></i>
 						</div>
 						<div class="content">
 							<div class="inner">
 <img src="images/SprocklightFit.png" alt="logo" style="width:350px;">
 
-								<h5>Website and Graphics Services</h5>									
+								<h5>Website and Graphics Services</h5>
+								<h2>We Grow Brands, Not Crops.</h2>
 <p>
-Our tried-and-true creative process makes design magic. With our designers that loves <br>to collaborate, we’ll turn your great ideas into a custom design you can’t get anywhere else.
+Results and return on your investments matter. We create digital products that are easy to use and incredibly effective.<br>Sprocklight
+	specializes in conversion-focused design, world-class web development, branding, and custom marketing solutions.
 
 <br />
 								
