--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 								<h5>Website and Graphics Services</h5>
 								<h2>We Grow Brands, Not Crops.</h2>
 <p>
-Results and return on your investments matter. We create digital products that are easy to use and incredibly effective.<br>Sprocklight
+Results and return on your investments matter. We create digital products that's easy to use and incredibly effective.<br> Sprocklight
 	specializes in conversion-focused design, world-class web development, branding, and custom marketing solutions.
 
 <br />
