--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 								<h2>We Grow Brands, Not Crops.</h2>
 <p>
 Results and return on your investments matter. We create digital products that's easy to use and incredibly effective.<br> Sprocklight
-	specializes in conversion-focused design, world-class web development, branding, and custom marketing solutions.
+	specializes in conversion-focused design, web development, branding, and custom marketing solutions.
 
 <br />
 								
