--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 
 <html>
 	<head>
+		<meta property="og:image" content="images/socialshare.jpg">
+<meta property="og:image:type" content="image/jpg">
+<meta property="og:image:width" content="1024">
+<meta property="og:image:height" content="512">
 		<title>Sprocklight - Digital Marketing Services</title>
 <link rel="icon" type="images/favicon.jpg" href="images/favicon.jpg"/>
 		<meta charset="utf-8" />
