--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@ Results and return on your investments matter. We create digital products that's
 								<span class="image main"><img src="images/about.png" alt="" /></span>
 								<p>Established in 2018, <strong>Sprocklight</strong> specializes in creating website design and layout for both
 Wordpress and Shopify which communicates ideas that inspire, inform, and captivate
-consumers. We cater different industries/niches and we have dedicated team members for
-graphics, video editing, and copywriting, depending on the client's needs.</a></p>
+consumers. We cater to most industries have dedicated experts for
+graphics, video editing, and branding, depending on the client's needs.</a></p>
 <span class="image main"><img src="images/about2.jpg" alt="" /></span>
 								<p>First impressions are critical, especially online. You need your online brand to simultaneously meet customer expectations, while creating a feeling of credibility. 
 <p><strong>Sprocklight</strong> is the go-to website layout and design service by most businesses. We make it easy to work with entrepreneurs, companies from around the world to build your brand through custom, memorable design.</p>
