--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ graphics, video editing, and branding, depending on the client's needs.</a></p>
 								<p>First impressions are critical, especially online. You need your online brand to simultaneously meet customer expectations, while creating a feeling of credibility. 
 <p><strong>Sprocklight</strong> is the go-to website layout and design service by most businesses. We make it easy to work with entrepreneurs, companies from around the world to build your brand through custom, memorable design.</p>
 </p>
-<a href="#services" class="button">View Services</a></li>
+<a href="#services" class="button">View Services</a></li><br>
 							</article>
 
 						<!-- Work -->
@@ -88,7 +88,7 @@ Their goal is to have an all-in-one website wherein clients can book their event
 needing to meet up in person. With a site that had never been optimized for SEO,
 they wanted their site to show at the top search for "Antipolo Venue" keyword.</p>
 
-<h5>Website Layout + Design</h5>								
+<h4>Website Layout + Design</h4>								
 <p>A minimalist approach on their <a href="https://emeraldeventsplace.com/">website</a> that resonates
 their brand, along with a booking system that is 
 fully integrated with their company email to minimize operating expenses.</p>
@@ -96,7 +96,7 @@ fully integrated with their company email to minimize operating expenses.</p>
 "images/proofemerald.png" 
          alt="SEO Emerald" 
          align="center"></span>
-<h5>SEO Marketing</h5>
+<h4>SEO Marketing</h4>
 <p>We first made sure the site content was set up for success by implementing our keywords in meta titles and descriptions, title tags, and in the content on specific target pages.
 We continued this process for a few months, resulting in even more organic traffic and higher rankings. The continuous link-building, website audit, and individual location pages helped drive positive results. 							
 </p>
@@ -115,7 +115,7 @@ mobile and desktop users.</p>
          align="center"></span>
 
 
-<h5>Website Layout + Design</h5>								
+<h4>Website Layout + Design</h4>								
 <p>A <a href="https://propellerrealty.com/">website</a> that resonates
 their sleekness, showcasing their listings that automatically creates dedicated 
 property pages. We have also integrated product filters, and 
@@ -126,7 +126,8 @@ automatic collection pages based on the property's city/location to reduce workl
 "images/clients.png" 
          alt="Propeller Website" 
          align="center"></span>
-<a href="#contact" class="button">Contact Us</a></li>
+<a href="#contact" class="button">Ask Anything</a></li>
+<br>
 
 </article>
 
@@ -188,7 +189,7 @@ Below are some of the ways we can help you advertise your business using SEO tac
 <p>Using external sources in the form of outreach strategies can be beneficial for your business and/or brand. Getting recognized by other platforms, sites, and social influencers can define true page relevancy.</p>										
 <li></li>
 									</ul>
-<a href="#contact" class="button">Contact Us</a></li>
+<a href="#contact" class="button">Contact Us</a></li><br>
 
 
 
