--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@ graphics, video editing, and branding, depending on the client's needs.</a></p>
 								<p>First impressions are critical, especially online. You need your online brand to simultaneously meet customer expectations, while creating a feeling of credibility. 
 <p><strong>Sprocklight</strong> is the go-to website layout and design service by most businesses. We make it easy to work with entrepreneurs, companies from around the world to build your brand through custom, memorable design.</p>
 </p>
-<a href="#services" class="button">View Services</a></li><br>
+		<a href="#work" class="button">Our Projects</a></li>
+	<p></p>
 							</article>
 
 						<!-- Work -->
@@ -126,7 +127,8 @@ automatic collection pages based on the property's city/location to reduce workl
 "images/clients.png" 
          alt="Propeller Website" 
          align="center"></span>
-<a href="#contact" class="button">Ask Anything</a></li>
+<a href="#services" class="button">What We Offer</a></li>
+<p></p>
 <br>
 
 </article>
@@ -189,7 +191,8 @@ Below are some of the ways we can help you advertise your business using SEO tac
 <p>Using external sources in the form of outreach strategies can be beneficial for your business and/or brand. Getting recognized by other platforms, sites, and social influencers can define true page relevancy.</p>										
 <li></li>
 									</ul>
-<a href="#contact" class="button">Contact Us</a></li><br>
+<a href="#contact" class="button">Ask Us Anything</a></li><br>
+<p></p>
 
 
 
