--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ video content, We do it all.</p>
 										<li><strong>Content Creation</strong></li>
 										<li></li>
 									</ul>
-<span class="image main"><img src="images/branding.png" alt="" /></span>
+<span class="image main"><img src="images/seo.png" alt="" /></span>
 <h3>Search Engine Optimization</h3>								
 <p>
 Search engine optimization allows your business or brand to appear when a relevant search term is “Googled”, allowing you to control who finds you and when. 
