--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ their sleekness, showcasing their listings that automatically creates dedicated
 property pages. We have also integrated product filters, and 
 automatic collection pages based on the property's city/location to reduce workload.
 </p>
-<center><h2>Full Client List</h3></center>
+<center><h2>We've Collaborated With</h3></center>
 <span class="image main"><img src=
 "images/clients.png" 
          alt="Propeller Website" 
