--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@ graphics, video editing, and branding, depending on the client's needs.</a></p>
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Clients</h2>
-								<span class="image main"><img src="images/cartel.png" alt="" /></span><a href="https://www.skincartel.co/">Visit their website</a>
+								<span class="image main"><img src="images/cartel.png" alt="" /></span>
 <h3>Case Study</h3>
-								<p>Acquired 2021, <strong>SkinCartel</strong> is a premium scented skincare line in Canada that sells 
+								<p>Acquired 2021, <strong><a href="https://www.skincartel.co/">SkinCartel</a></strong> is a premium scented skincare line in Canada that sells 
 products mainly online. They had the business vision, but no brand. Our task was to build an identity, launch a website, and bring this all-new moisturizer to market.  </p>
 
 <h4>Website Layout + Design</h4>								
