--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@ products mainly online. They had the business vision, but no brand. Our task was
 out in the space, infuses insights gleaned from our market research and puts our audience first with client-centric design.</p>
 <h4>Logo + Branding</h4>
 <p>A controversial name (<i>Cartel</i>, due to increasing popularity of drug tv series), 
-a modern logo and fresh design elements, and a conversational, yet bold brand voice.							
+a modern logo and fresh design elements, and a conversational, yet bold brand voice.	
 </p>
+								<a href="https://www.skincartel.co/" class="button small">Visit SkinCartel</a>
 <span class="image main"><img src="images/emerald.png" alt="" /></span>
 <h4>Case Study</h4>
 								<p><strong>The Emerald Events Place</strong> is a luxurious venue situated in Antipolo City, 
