--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ graphics, video editing, and branding, depending on the client's needs.</a></p>
 								<h2 class="major">Clients</h2>
 								<span class="image main"><img src="images/cartel.png" alt="" /></span>
 <h3>Case Study</h3>
-								<p>Acquired 2021, <strong><a href="https://www.skincartel.co/">SkinCartel</a></strong> is a premium scented skincare line in Canada that sells 
+								<p>Acquired 2021, <strong>SkinCartel</strong> is a premium scented skincare line in Canada that sells 
 products mainly online. They had the business vision, but no brand. Our task was to build an identity, launch a website, and bring this all-new moisturizer to market.  </p>
 
 <h4>Website Layout + Design</h4>								
@@ -102,6 +102,7 @@ fully integrated with their company email to minimize operating expenses.</p>
 <p>We first made sure the site content was set up for success by implementing our keywords in meta titles and descriptions, title tags, and in the content on specific target pages.
 We continued this process for a few months, resulting in even more organic traffic and higher rankings. The continuous link-building, website audit, and individual location pages helped drive positive results. 							
 </p>
+								<a href="https://emeraldeventsplace.com/" class="button small">Visit The Emerald</a>
 <span class="image main"><img src="images/propeller.png" alt="" /></span>
 <h3>Case Study</h3>
 								<p><strong>Propeller Realty</strong> is a Real Estate Brokerage based in Metro Manila that specializes 
@@ -123,6 +124,7 @@ their sleekness, showcasing their listings that automatically creates dedicated
 property pages. We have also integrated product filters, and 
 automatic collection pages based on the property's city/location to reduce workload.
 </p>
+								<a href="https://emeraldeventsplace.com/" class="button small">Visit Propeller Realty</a>
 <center><h2>We've Collaborated With</h3></center>
 <span class="image main"><img src=
 "images/clients.png" 
