--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ their sleekness, showcasing their listings that automatically creates dedicated
 property pages. We have also integrated product filters, and 
 automatic collection pages based on the property's city/location to reduce workload.
 </p>
-								<a href="https://emeraldeventsplace.com/" class="button small">Visit Propeller Realty</a>
+								<a href="https://www.propellerrealty.com/" class="button small">Visit Propeller Realty</a>
 <center><h2>We've Collaborated With</h3></center>
 <span class="image main"><img src=
 "images/clients.png" 
