--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@ automatic collection pages based on the property's city/location to reduce workl
 								<a href="https://www.propellerrealty.com/" class="button small">Visit Propeller Realty</a>
 								<br>
 								<br>
+								<hr>
 <center><h2>We've Collaborated With</h3></center>
 <span class="image main"><img src=
 "images/clients.png" 
@@ -144,7 +145,7 @@ automatic collection pages based on the property's city/location to reduce workl
 								<span class="image main"><img src="images/webdesign.png" alt="" /></span>
 <h3>Web Design</h3>								
 <p>
-Convert your audience with websites with appeal. This element has
+Convert your audience with websites with appeal. This element has the
 biggest factor for bounce rates. The time a user makes that decision is less than one second. Don’t let customers 
 slip through your fingers just because you thought your site was good enough.</p>
 <h4>Elements of a good website</h4>
