--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ Below are some of the ways we can help you advertise your business using SEO tac
 							<article id="contact">
 								<h2 class="major">Ask Us Anything</h2>
 <p>Our team of digital marketers, web developers, and graphic designers deliver just that. Elevate your brand’s presence with a custom-tailored digital marketing strategy and flawless execution.</p>
-<p>Our team works <strong>MONDAY-FRIDAY</strong> between <strong>10:00AM - 6:00PM PH</strong><br>
+<p>Our team works <strong>MONDAY-FRIDAY</strong> between <strong>10:00AM - 6:00PM PH</strong><br><br>
 	<a href="https://sprocklight.github.io/folio/" class="button small">View Our Portfolio+</a>
 <span class="image main"><img src="images/emerald.png" alt="" /></span>
 <i>During normal working hours, we aim to respond back to any questions or inquiries within 24 hours.</i></p>
