--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ Results and return on your investments matter. We create digital products that's
 								<li><a href="#work">Clients</a></li>
 								<li><a href="#services">Services</a></li>
 								<li><a href="#contact">Contact</a></li>
+								<li><a href="https://sprocklight.github.io/folio/">Portfolio+</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -210,7 +211,7 @@ Below are some of the ways we can help you advertise your business using SEO tac
 <p>Our team of digital marketers, web developers, and graphic designers deliver just that. Elevate your brand’s presence with a custom-tailored digital marketing strategy and flawless execution.</p>
 <p>Our team works <strong>MONDAY-FRIDAY</strong> between <strong>10:00AM - 6:00PM PH</strong><br><br>
 	<a href="https://sprocklight.github.io/folio/" class="button small">View Portfolio+</a>
-<span class="image main"><img src="images/emerald.png" alt="" /></span>
+<span class="image main"><img src="images/portfolio.jpg" alt="" /></span>
 <i>During normal working hours, we aim to respond back to any questions or inquiries within 24 hours.</i></p>
 									<form method="post" action="#">
 									<div class="fields">
