--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Results and return on your investments matter. We create digital products that's
 								<li><a href="#work">Clients</a></li>
 								<li><a href="#services">Services</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<li><a href="https://sprocklight.github.io/folio/">Portfolio+</a></li>
+								<li><a href="https://sprocklight.github.io/folio/">Folio+</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
