--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Results and return on your investments matter. We create digital products that's
 								<span class="image main"><img src="images/about.png" alt="" /></span>
 								<p>Established in 2018, <strong>Sprocklight</strong> specializes in creating website design and layout for both
 Wordpress and Shopify which communicates ideas that inspire, inform, and captivate
-consumers. We cater to most industries have dedicated experts for
+consumers. We cater to most industries + dedicated experts for
 graphics, video editing, and branding, depending on the client's needs.</a></p>
 <span class="image main"><img src="images/about2.png" alt="" /></span>
 								<p>First impressions are critical, especially online. You need your online brand to simultaneously meet customer expectations, while creating a feeling of credibility. 
