--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ Results and return on your investments matter. We create digital products that's
 								<li><a href="#services">Services</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<li><a href="https://sprocklight.github.io/folio/">Folio+</a></li>
+								<li><a href="https://sprocklight.github.io/music/">Music</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
