--- a/index.html
+++ b/index.html
@@ -141,10 +141,12 @@ automatic collection pages based on the property's city/location to reduce workl
 
 </article>
 
-						<!-- Services -->
-							<article id="services">
-								<h2 class="major">Services</h2>
-								<span class="image main"><img src="images/webdesign.png" alt="" /></span>
+<!-- Services -->
+
+<article id="services">
+<h2 class="major">Services</h2>
+								
+<span class="image main"><img src="images/webdesign.png" alt="" /></span>
 <h3>Web Design</h3>								
 <p>
 Convert your audience with websites with appeal. This element has the
@@ -199,7 +201,21 @@ Below are some of the ways we can help you advertise your business using SEO tac
 <p>Using external sources in the form of outreach strategies can be beneficial for your business and/or brand. Getting recognized by other platforms, sites, and social influencers can define true page relevancy.</p>										
 <li></li>
 									</ul>
-<a href="#contact" class="button">Ask Us Anything</a></li><br>
+
+<span class="image main"><img src="images/amazon.jpg" alt="" /></span>
+<h3>Amazon FBA Product Research</h3>								
+<p>
+We find high-demand products to sell online. We have years of experience in locating the best products, with competitive pricing 
+and quality, to meet your required margin. We help sellers source with initial margin of 30% to 40%, with a minimum profit of $3 for standard products. We use the following tools for product research:</h4>
+<ul class="alt">
+										<li><strong>RevSeller</strong></li>
+										<li><strong>Keepa</strong></li>
+										<li><strong>Retail Me Not</strong></li>
+										<li><strong>Tactical Arbitrage</strong></li>
+										<li><strong>SellerAmp Sas</strong></li>
+										<li></li>
+									</ul>
+<a href="#contact" class="button">Ready to Start? Ask Us Anything</a></li><br>
 <p></p>
 
 
