--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ their sleekness, showcasing their listings that automatically creates dedicated
 property pages. We have also integrated product filters, and 
 automatic collection pages based on the property's city/location to reduce workload.
 </p>
-								<a href="https://www.propellerrealty.com/" class="button small">Visit Propeller Realty</a>
+								<a href="https://www.propeller.ph/" class="button small">Visit Propeller Realty</a>
 								
 								<br>
 								<br>
@@ -594,6 +594,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
